# 7288-Demo-Bot-main-code

./: build.dependencies.gradle  build.gradle
FtcRobotController/: build.gradle
FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/: proctor.java
Team28420/src/main/java/org/firstinspires/ftc/team28420/: BlueAutonomous.java  BlueTeleOp.java  BlueTeleop.java  DribblerTestTeleOp.java  NewActionsAutonomous.java  NewActionsTeleOp.java  RedAutonomous.java  RedTeleOp.java  RedTeleop.java  TestTeleOp.java
TeamCode/: build.gradle
TeamCode/generator/: generate_opmodes.py
TeamCode/generator/templates/: Autonomous.java  TeleOp.java
TeamCode/src/main/cpp/: CMakeLists.txt
TeamCode/src/main/cpp/LibLoader/: lib_loader.cpp  lib_loader.hpp
TeamCode/src/main/cpp/Opmodes/: Test.hpp
TeamCode/src/main/cpp/SDK/Header/: Main.hpp  Util.hpp
TeamCode/src/main/cpp/SDK/Header/Hardware/: Dc_Motor_Ex.hpp
TeamCode/src/main/cpp/SDK/Sources/: Util.cpp
TeamCode/src/main/cpp/SDK/Sources/Hardware/: Dc_Motor_Ex.cpp
TeamCode/src/main/cpp/lib_loader/: lib_loader.cpp  lib_loader.hpp
TeamCode/src/main/cpp/main/opmodes/: test.cpp  test.hpp
TeamCode/src/main/cpp/sdk/header/: main.hpp  op_mode.hpp  util.hpp
TeamCode/src/main/cpp/sdk/header/hardware/: dc_motor_ex.hpp
TeamCode/src/main/cpp/sdk/sources/: op_mode.cpp  util.cpp
TeamCode/src/main/cpp/sdk/sources/hardware/: dc_motor_ex.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AprilTagAutoalignemmentTankDrrive.java  AprilTagWebcam.java  AprilTagWebcamCode.java  AutoAimBlue.java  AutoAimTestOp.java  (+64 more)
(+107 files in other folders)
